# OshiNote

./: .gitignore  LICENSE  README.ja.md  README.md  README.zh-CN.md  index.html  journal_view_blueprint.md  oshinote_project_blueprint.md  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
docs/: stabilization-baseline.md  testing-and-development-guidelines.md
local-dev-plan/: 2026-06-07.md
media/: README.md
public/fonts/stamps/: README.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/editor/: EditorToolbar.tsx  TipTapEditor.tsx  extensions.ts
src/components/layout/: MainLayout.tsx  (+4 more)
src/database/: index.ts  migrations.ts
src/hooks/: useGlobalEvent.ts  useKeyboardShortcuts.ts  useObjectUrl.ts
src/i18n/: translations.ts  useI18n.ts
src/pages/: AIToolsPage.tsx  ExportPage.tsx  HomePage.tsx  IllustrationsPage.tsx  JournalEditorPage.tsx  JournalHomePage.tsx  NoteEditorPage.tsx  NotesPage.tsx  OshiDetailPage.tsx  OshiIllustrationsPage.tsx  OshiJournalPage.tsx  OshiListPage.tsx  OshiOverviewPage.tsx  OshiTagsPage.tsx  ResourceMaterialsPage.tsx  ResourceTemplatesPage.tsx  ResourcesPage.tsx  SettingsPage.tsx  TagDetailPage.tsx  TagsPage.tsx
src/stores/: aiStore.ts  archiveStore.ts  editorStore.ts  journalStore.ts  languageStore.ts  noteStore.ts  oshiStore.ts  sidebarStore.ts  stampFontStore.ts  stampSettingsStore.ts  themeStore.ts  updateStore.ts
src/types/: index.ts
src/utils/: safeJson.ts  safeLocalStorage.ts  textStats.ts
(+89 files in other folders)
