[package]
name = "oshinote"
version = "0.1.0"
description = "A cozy desktop diary app for VTuber fans"
authors = ["OshiNote"]
edition = "2021"

[lib]
name = "oshinote_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-process = "2"
reqwest = { version = "0.13.3", default-features = false, features = ["rustls"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
